# vulkan-effects

./: .gitignore  .gitmodules  CMakeLists.txt  config.ini
assets/models/sponza/: Sponza.gltf  arch_diffuse.ktx2  arch_metallicRoughness.ktx2  arch_normals.ktx2  bricks2_diffuse.ktx2  bricks2_metallicRoughness.ktx2  bricks2_normals.ktx2  bricks3_diffuse.ktx2  bricks3_metallicRoughness.ktx2  bricks3_normals.ktx2  bricks4_diffuse.ktx2  bricks4_metallicRoughness.ktx2  bricks4_normals.ktx2  bricks_diffuse.ktx2  bricks_metallicRoughness.ktx2  bricks_normals.ktx2  chains_diffuse.ktx2  chains_metallicRoughness.ktx2  chains_normals.ktx2  concrete_diffuse.ktx2  concrete_metallicRoughness.ktx2  concrete_normals.ktx2  curtain_blue_diffuse.ktx2  curtain_blue_normals.ktx2  curtain_green_diffuse.ktx2  curtain_metallicRoughness.ktx2  curtain_red_diffuse.ktx2  door_diffuse.ktx2  door_metallicRoughness.ktx2  door_normals.ktx2  fabric_blue_diffuse.ktx2  fabric_blue_normals.ktx2  fabric_green_diffuse.ktx2  fabric_metallicRoughness.ktx2  fabric_red_diffuse.ktx2  lion_diffuse.ktx2  lion_metallicRoughness.ktx2  lion_normals.ktx2  lionpot_diffuse.ktx2  lionpot_metallicRoughness.ktx2  (+26 more)
assets/shaders/: atmosphere.glsl  common.glsl  composition.frag  composition.frag.spv  cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  cull.comp  cull.comp.spv  filmgrain.frag  filmgrain.frag.spv  fullscreen.vert  fullscreen.vert.spv  fullscreenNoUV.vert  fullscreenNoUV.vert.spv  gaussianBlur.frag  gaussianBlur.frag.spv  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  model.frag  model.frag.spv  model.vert  model.vert.spv  shadowmap.vert  shadowmap.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  ssao.frag  ssao.frag.spv  ssaoblur.frag  ssaoblur.frag.spv
assets/shaders/postprocess/: uber.frag  uber.frag.spv
assets/textures/: skybox.ktx2
include/: config.h  game.h  garbage.h  mathext.h  modelViewScene.h  pipeline.h  scene.h  temp.h  util.h  vk.h  vkFunctions.h  vkInit.h  vkModel.h  vkRayTracingFunctions.h
scripts/: generateVkFunctions.bat  generateVkFunctions.py
src/: config.c  game.c  garbage.c  main.c  mathext.c  modelViewScene.c  pipeline.c  temp.c  util.c  vk.c  vkFunctions.c  vkInit.c  vkModel.c  vkRayTracingFunctions.c
